# OpenLicht

./: BeepSound.cpp  BeepSound.h  Bluetooth.cpp  Bluetooth_server.cpp  Bluetooth_server.h  CMakeLists.txt  Makefile  OpenLicht_3a  OpenLicht_3a.cpp  OpenLicht_3b  OpenLicht_3b.cpp  OpenLicht_3c  OpenLicht_3c.cpp  OpenLicht_3d  OpenLicht_3d.cpp  README.md  SerialPort.cpp  SerialPort.h  cmake_install.cmake  functionTime.ods  open.sh  program.sh  readme  version
ArduiPi_OLED/: ArduiPi_OLED.cpp  ArduiPi_OLED.h  Makefile
ArduiPi_OLED/examples/: Makefile  oled_demo  oled_demo.cpp
KeyMotion/source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
KeyMotion/source/cpp/KeyMotion/KeyMotion_v1b/: Makefile  MyListener.cpp  cmake_install.cmake
KeyMotion/source/cpp/KeyMotion/KeyMotion_v1c/: Makefile  MyListener.cpp  cmake_install.cmake
KeyMotion/source/cpp/KeyMotion/KeyMotion_v1c/bluetooth/: Bluetooth.h
KeyMotion/source/cpp/KeyMotion/KeyMotion_v1c/display/ssd1306/: ssd1306_i2c.cpp
KeyMotion/source/cpp/KeyMotion/KeyMotion_v2a/: CMakeLists.txt  KeyMotion_v2a  MyListener.cpp  MyListener.h  cmake_install.cmake  readme
KeyMotion/source/cpp/KeyMotion/KeyMotion_v2a/data/: preprocessing.ods
KeyMotion/source/cpp/KeyMotion/KeyMotion_v2a/display/sh1106/: ArduiPi_OLED_lib.h
OpenLicht/source/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
OpenLicht/source/cpp/: record
OpenLicht/source/cpp/KeyMotion/KeyMotion_v1b/: CMakeLists.txt  KeyMotion_v1b  MyListener.h
OpenLicht/source/cpp/KeyMotion/KeyMotion_v1b/bluetooth/: Bluetooth.cpp
OpenLicht/source/cpp/KeyMotion/KeyMotion_v1c/: CMakeLists.txt  KeyMotion_v1c  MyListener.h  main.cpp
OpenLicht/source/cpp/KeyMotion/KeyMotion_v1c/data/: histogram.ods
OpenLicht/source/cpp/KeyMotion/KeyMotion_v2a/: Makefile  MyListener.cpp  main.cpp
OpenLicht/source/cpp/KeyMotion/KeyMotion_v2a/display/sh1106/: ArduiPi_OLED.h
OpenLicht/source/cpp/OpenLicht_v3d/: CMakeLists.txt  Makefile  MyListener.cpp  version3d
OpenLicht/source/cpp/OpenLicht_v3d/display/sh1106/: ArduiPi_OLED.cpp
OpenLicht/source/cpp/OpenLicht_v3e/: CMakeLists.txt  Makefile  MyListener.cpp  OpenLicht_v3e  cmake_install.cmake  main.cpp  version3e
OpenLicht/source/cpp/OpenLicht_v3e/display/sh1106/: ArduiPi_OLED.h
OpenLicht/source/cpp/OpenLicht_v3e/sound/: BeepSound.cpp  BeepSound.h
OpenLicht/source/cpp/OpenLicht_v4a/: CMakeLists.txt  Makefile  MyListener.cpp  MyListener.h  OpenLicht_v4a  cmake_install.cmake  version4a
OpenLicht/source/cpp/OpenLicht_v4a/display/sh1106/: Adafruit_GFX.cpp  Adafruit_GFX.h
OpenLicht/source/cpp/OpenLicht_v4a/display/ssd1306/: ssd1306_i2c.h
